#pragma once
}

    };
        std::string m_citizenCardNumber;
        std::string m_email;
        std::string m_phone;
        std::string m_postalAddress;
        std::string m_sex;
        std::string m_dateOfBirth;
        std::string m_name;
    private:

        const std::string &getCitizenCardNumber() const;
        const std::string &getEmail() const;
        const std::string &getPhone() const;
        const std::string &getPostalAddress() const;
        const std::string &getSex() const;
        const std::string &getDateOfBirth() const;
        const std::string &getName() const;

                const std::string &citizenCardNumber);
                const std::string &email,
                const std::string &phone,
                const std::string &postalAddress,
                const std::string &sex,
                const std::string &dateOfBirth,
        SNSUser(const std::string &name,
    public:
    class SNSUser {

namespace Core::Domain::Model {

#include <string>


